txs auto checkin

--- a/SM/Homework 7/LaTeX/defs.tex
+++ b/SM/Homework 7/LaTeX/defs.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \titleformat{\section}
 {\color{UM_DarkBlue}\normalfont\large\bfseries}
-{\color{red!80!black}\thesection}{1em}{}
+{\color{Blue!80!black}\thesection}{1em}{}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \hypersetup{
