txs auto checkin

--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -1,58 +1,5 @@
 % !TeX spellcheck = en_US
 \documentclass[12pt]{article}
-\usepackage{amsmath,amsthm,amsfonts,amssymb,amscd}
-\usepackage[lining,semibold,scaled=1.05]{ebgaramond}      \usepackage[cmintegrals,cmbraces]{newtxmath}
-% Use FUCKING GARAMOND
-\usepackage{graphicx}           
-% Enhanced support for images
-\usepackage{float}              
-% Improved interface for floating objects
-\usepackage{booktabs}        
-\usepackage{pdfpages}   
-% Publication quality tables
-\usepackage[x11names,table]{xcolor}             
-% Driver-independent color extensions
-\usepackage[margin=1in]{geometry}           
-% Customize document dimensions
-\usepackage{fullpage}           
-% all 4 margins to be either 1 inch or 1.5 cm
-\usepackage{comment}            
-% Commenting
-\usepackage{mathtools}
-\usepackage{minted}             
-% Highlighted source code. Syntax highlighting
-\usepackage{listings}           
-% Typeset programs (programming code) within LaTeX
-\usepackage{lastpage}           
-% Reference last page for Page N of M type footers.
-\usepackage{fancyhdr}           
-% Control of page headers and footers
-\usepackage{hyperref}           
-% Cross-referencing 
-\usepackage[small,bf]{caption}  
-% Captions
-\usepackage{multicol}
-\usepackage{cancel}
-\usepackage{tikz}   
-\usetikzlibrary{intersections,external}    
-\usepackage{pgfplots}   
-\pgfplotsset{compat=1.18}     
-% Creating graphic elements
-\usepackage{circuitikz}         
-% Creating circuits
-\usepackage{verbatim}          
-% Print exactly what you type in
-\usepackage{cite}               
-% Citation
-\usepackage[us]{datetime} 
-% Various time format
-\usepackage{blindtext}
-% Generate blind text
-\usepackage[utf8]{inputenc}
-\usepackage{array}
-\usepackage{makecell}
-\usepackage{tabularx}
-\usepackage{titlesec}
 \input{defs.tex}
 \setminted{style=monokai}
 \usepackage{pygmentex}
@@ -80,5 +27,7 @@
 	%%%%%%%%%%%%%%% NEW SECTION %%%%%%%%%%%%%%% 
 	\section{Exercise 1}
 	Negative exponential distribution:
-	
+	\begin{equation*}
+		F_X(x)=
+	\end{equation*}
 \end{document}
