txs auto checkin

--- a/SM/Homework 7/LaTeX/defs.tex
+++ b/SM/Homework 7/LaTeX/defs.tex
@@ -635,12 +635,7 @@
 												
 												\renewcommand\leq\leqslant
 												\renewcommand\geq\geqslant			
-												
-												\usepackage[
-												backend=biber,
-												style=authoryear,
-												sorting=nyt
-												]{biblatex}			\posttitle{\par\end{center}\vskip 0.5em}
+											\posttitle{\par\end{center}\vskip 0.5em}
 
 \setlength\parindent{0pt}
 
