txs auto checkin

--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -28,6 +28,6 @@
 	\section{Exercise 1}
 	Negative exponential distribution:
 	\begin{equation*}
-		F_X(x)=
+		F_X(x)=\pr(X\leq x)=1-e^{\lambda x}\qquad f_X(x)=\frac{\dif F_X}{\dx}=\lambda e^{-\lambda x}
 	\end{equation*}
 \end{document}
