--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -26,7 +26,7 @@
 	
 	%%%%%%%%%%%%%%% NEW SECTION %%%%%%%%%%%%%%% 
 	\section{Exercise 1}
-	Negative exponential distribution:
+	We know that the negative exponential distribution has the following cumulative distribution function $F_X(x)$ and probability density function $f_X(x)$;
 	\begin{equation*}
 		F_X(x)=\pr(X\leq x)=1-e^{\lambda x}\qquad f_X(x)=\frac{\dif F_X}{\dx}=\lambda e^{-\lambda x}
 	\end{equation*}
