--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -26,8 +26,12 @@
 	
 	%%%%%%%%%%%%%%% NEW SECTION %%%%%%%%%%%%%%% 
 	\section{Exercise 1}
-	We know that the negative exponential distribution has the following cumulative distribution function $F_X(x)$ and probability density function $f_X(x)$;
+	We know that the negative exponential distribution has the following cumulative distribution function $F_X(x)$ and probability density function $f_X(x)$:
 	\begin{equation*}
-		F_X(x)=\pr(X\leq x)=1-e^{\lambda x}\qquad f_X(x)=\frac{\dif F_X}{\dx}=\lambda e^{-\lambda x}
+		F_X(x)=\pr(X\leq x)=1-e^{\lambda x}\qquad f_X(x)=\frac{\dif F_X}{\dx}=\lambda e^{-\lambda x}.
+	\end{equation*}
+	Since the expected value of this distribution is
+	\begin{equation*}
+		\ev[X]=\frac{1}{\lambda}
 	\end{equation*}
 \end{document}
