--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -37,7 +37,7 @@
 	We can thus easily find the parameter $\lambda$ for the different random variables involved:
 	\begin{itemize}
 		\item Working periods between failures ($X$): $\lambda_X=\frac{1}{3000}\approx0.000333$;
-		\item Short Repair Times ($Y$): $\lambda_Y=\frac{1}{40}=0.025$;
-		\item Long Repair Times ($V$): $\lambda_V=\frac{1}{960}\approx 0.00104$.
+		\item Short repair times ($Y$): $\lambda_Y=\frac{1}{40}=0.025$;
+		\item Long repair times ($V$): $\lambda_V=\frac{1}{960}\approx 0.00104$.
 	\end{itemize}
 \end{document}
