txs auto checkin

--- a/SM/Homework 7/LaTeX/defs.tex
+++ b/SM/Homework 7/LaTeX/defs.tex
@@ -1,5 +1,7 @@
 \usepackage{amsmath,amsthm,amsfonts,amssymb,amscd}
-\usepackage[lining,semibold,scaled=1.05]{ebgaramond}      \usepackage[cmintegrals,cmbraces]{newtxmath}
+\usepackage[lining,semibold,scaled=1.05]{ebgaramond}     
+\usepackage{ebgaramond-maths}
+ %\usepackage[cmintegrals,cmbraces]{newtxmath}
 % Use FUCKING GARAMOND
 \usepackage{graphicx}           
 % Enhanced support for images
