--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -36,8 +36,8 @@
 	In this formulation the parameter is given directly as the expected value $\ev[X]=\eta$ of the distribution. We have our three expected values, reflecting the average time of each of these three events:
 	\begin{enumerate}[\circnum]
 		\item time between breakages of a machine: $\eta_{\mathsf{arrival}}=3000\text{ mins}$;
-		\item service time of the short repair station: $\eta=40\text{ mins}$;
-		\item service time of the long repair station: $\eta=960\text{ mins}$;
+		\item service time of the short repair station: $\eta_{\mathsf{short}}=40\text{ mins}$;
+		\item service time of the long repair station: $\eta_{\mathsf{long}}=960\text{ mins}$;
 	\end{enumerate}
 	This characteristic brings us to the particular case of the tandem server with ``M/M/2'' service and arrival times seen during lectures. 
 In this problem, due to the memoryless property of the negative exponential distribution for all time variables (e.g., failure times, short and long repair times), defining regeneration points is straightforward. For example, a regeneration point can be set as the time when a machine enters the long repair station and the system resets to its initial conditions. This choice is based on the following schema:
