--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -61,7 +61,8 @@ In this scenario, due to the memoryless property of the negative exponential dis
 		\end{table}
 	in which we can easily notice we are in the bottom-right case, in which the service times of both the queue are negative-exponential.\\
 	Technically every departure could be a regeneration point but since our analysis focuses on the average waiting time of the long repair station we chose as regeneration points all the departures from the long station. 
-	This choice will also simplify our calculations: the value $\nu_{j}$, that counts the number of the occurrences of the event of interest in the current regeneration cycle, will always be 1.
+	This choice will also simplify our calculations: the value $\nu_{j}$, that counts the number of the occurrences of the event of interest in the current regeneration cycle, will always be 1. \\
+	For the distribution of the routings we assume a uniform distribution (so that 20\% of the departures from the short station will become an arrival to the long station.)
 	
 	\paragraph{Statistical Analysis}
 	Using the regenerative method, we accumulate observations (e.g., waiting times) during each cycle. The point estimate for the expected value of a performance metric $r$ can be calculated as:
