--- a/SM/Homework 7/LaTeX/defs.tex
+++ b/SM/Homework 7/LaTeX/defs.tex
@@ -82,7 +82,7 @@
 \usepackage{float}
 \usepackage{fontawesome5}
 \usepackage{tikz}
-\usetikzlibrary{shapes,arrows,positioning,patterns,arrows.meta, bending, shadings,intersections,shadows,decorations,fit,backgrounds,circuits.ee.IEC,shapes.callouts}
+\usetikzlibrary{shapes.geometric,arrows,positioning,patterns,arrows.meta, bending, shadings,intersections,shadows,decorations,fit,backgrounds,circuits.ee.IEC,shapes.callouts}
 \usepackage{pgfplots,pgfplotstable}
 \pgfplotsset{compat=1.18}
 \usepgfplotslibrary{fillbetween}
