txs auto checkin

--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -73,7 +73,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 	\begin{figure}[H]
 		\begin{tikzpicture}[node distance=2cm]
 			\node (start) [startstop] {Start};
-			\node (mainloop) [process,below of=start] {Process event in the list}
+			\node (mainloop) [process,below of=start] {Process event in the list};
 		\end{tikzpicture}
 	\end{figure}
 
