--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -3,7 +3,7 @@
 \input{defs.tex}
 \setminted{style=monokai}
 \usepackage{pygmentex}
-\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, maximum height=1cm,text centered, draw=black, fill=red!30]
+\tikzstyle{startstop} = [rectangle, rounded corners, minimum width=3cm, minimum height=1cm,text centered, draw=black, fill=red!30]
 \tikzstyle{io} = [trapezium, trapezium left angle=70, trapezium right angle=110, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=blue!30]
 \tikzstyle{process} = [rectangle, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=orange!30]
 \tikzstyle{decision} = [diamond, minimum width=3cm, minimum height=1cm, text centered, draw=black, fill=green!30]
@@ -74,7 +74,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 		\begin{tikzpicture}[node distance=2cm]
 			\node (start) [startstop] {Start};
 			\node (mainloop) [process,below of=start] {Process event in the list};
-			\node (regen) [max width=1cm,decision, below of=mainloop] {Is the event a regeneration point?};
+			\node (regen) [decision, below of=mainloop] {Is the event \\a regeneration point?};
 		\end{tikzpicture}
 	\end{figure}
 
