--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -73,8 +73,19 @@ In this scenario, due to the memoryless property of the negative exponential dis
 	\begin{figure}[H]
 		\begin{tikzpicture}[node distance=2cm]
 			\node (start) [startstop] {Start};
-			\node (mainloop) [process,below of=start] {Process event in the list};
-			\node (regen) [decision, align=center, below of=mainloop] {\small Regeneration point?};
+			\node (conditions) [decision, align=center, below of=start,yshift=-1cm] {\small Termination \\ \small conditions met?};
+			\node (mainloop) [process,below of=conditions,yshift=-1cm,align=center] {Process next \\ event in the list};
+			\node (regen) [decision, align=center, below of=mainloop,yshift=-1cm] {\small Regeneration\\ \small point?};
+			\node (collect) [process, below of=regen, yshift=-1cm,align=center]{Collect statistics \\ and reset measures};
+			\node (terminate) [process, below of=collect,align=center]{Compute\\ general statistics};
+			\node (end) [startstop,below of=terminate] {End};
+			\draw [arrow] (start)--(conditions);
+			\draw [arrow] (conditions)--node[anchor=south]{yes}+(-4,0)|- (terminate);
+			\draw [arrow] (conditions)--node[anchor=west]{no}(mainloop);
+			\draw[arrow] (mainloop)--(regen);
+			\draw[arrow] (regen)--node[anchor=west]{yes}(collect);
+			\draw[arrow] (regen)--node[anchor=south]{no}+(3,0)|-(conditions);
+			\draw[arrow](collect)--+(4,0)|-(conditions);
 		\end{tikzpicture}
 	\end{figure}
 
