--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -70,7 +70,8 @@ In this scenario, due to the memoryless property of the negative exponential dis
 	For the distribution of the routings we assume a uniform distribution (so that 20\% of the departures from the short station will become an arrival to the long station).
 	\subsection{The simulation}
 	For the implementation of this simulation we chose the classic event list approach: the bulk of the simulator is an ever-growing list of events sorted by the timestamp of their occurrence. Each of these events is ``processed'' one by one, typically by adding another related event to the list and computing the necessary measurements. \\
-	\begin{figure}[H]
+	\begin{figure}[h]
+		\centering
 		\begin{tikzpicture}[node distance=2cm]
 			\node (start) [startstop] {Start};
 			\node (conditions) [decision, align=center, below of=start,yshift=-1cm] {\small Termination \\ \small conditions met?};
@@ -86,6 +87,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 			\draw[arrow] (regen)--node[anchor=west]{yes}(collect);
 			\draw[arrow] (regen)--node[anchor=south]{no}+(3,0)|-(conditions);
 			\draw[arrow](collect)--+(4,0)|-(conditions);
+			\draw[arrow](terminate)--(end);
 		\end{tikzpicture}
 	\end{figure}
 
