txs auto checkin

--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -72,7 +72,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 	For the implementation of this simulation we chose the classic event list approach: the bulk of the simulator is an ever-growing list of events sorted by the timestamp of their occurrence. Each of these events is ``processed'' one by one, typically by adding another related event to the list and computing the necessary measurements. \\
 	\begin{figure}[h]
 		\centering
-		\begin{tikzpicture}[node distance=2cm]
+		\begin{tikzpicture}[node distance=2cm,scale=0.5]
 			\node (start) [startstop] {Start};
 			\node (conditions) [decision, align=center, below of=start,yshift=-1cm] {\small Termination \\ \small conditions met?};
 			\node (mainloop) [process,below of=conditions,yshift=-1cm,align=center] {Process next \\ event in the list};
