txs auto checkin

--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -89,6 +89,7 @@ In this scenario, due to the memoryless property of the negative exponential dis
 			\draw[arrow](collect)--+(4,0)|-(conditions);
 			\draw[arrow](terminate)--(end);
 		\end{tikzpicture}
+		\caption{Flowchart of the operations of our simulator}
 	\end{figure}
 
 	\section*{Simulation Results for 10 Customers}
