--- a/SM/Homework 7/LaTeX/main.tex
+++ b/SM/Homework 7/LaTeX/main.tex
@@ -89,9 +89,12 @@ In this scenario, due to the memoryless property of the negative exponential dis
 			\draw[arrow](collect)--+(4,0)|-(conditions);
 			\draw[arrow](terminate)--(end);
 		\end{tikzpicture}
-		\caption{Flowchart of the operations of our simulator}
+		\caption{Flowchart of the operations of our simulator.}
 	\end{figure}
-
+	First of all, we definite a structure to 
+	\begin{ccode}
+		eheh
+	\end{ccode}
 	\section*{Simulation Results for 10 Customers}
 	The simulation gives the following results:
 	
